--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,25 @@
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  <style>
+.result {
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
   
+  #background-image: url("C:/Users/user/Desktop/ramkumar.jpg"); 
+}
+
+html{
+  background-color:pink;
+}
+
+</style>
 </head>
 
-<body>
+<body class="result">
  <!--<div class="login">
 	<h1>Predict Salary Analysis</h1>
 
@@ -27,13 +42,18 @@
    {{ prediction_text }}
 
  </div> -->
+ 
 	<form class="" action="predict" method="post">
-		<input type="file" name="csv_file" id="csv_file" required="True" class="form-control">
-		<input type="submit" name="" value="submit">
+		<input type="file" name="csv_file" id="csv_file" required="True" class="form-control" text-align: center;>
+		<input type="submit" name="" value="submit" text-align: center;>
 	</form>
 	<br>
    <br>
-   output is : 
+   
+   Accuracy is : 
+   {{ data | safe }}<br><br>
+   ROC is : 
    {{ data | safe }}
+   
 </body>
 </html>
