--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@ html{
    {{ prediction_text }}
 
  </div> -->
- 
+	<h1> Your Hackathon Results </h1>
 	<form class="" action="predict" method="post">
 		<input type="file" name="csv_file" id="csv_file" required="True" class="form-control" text-align: center;>
 		<input type="submit" name="" value="submit" text-align: center;>
