--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@ html{
  </div> -->
 	<h1> Your Hackathon Results </h1>
 	<form class="" action="predict" method="post">
+		please upload .csv file...<br><br>
 		<input type="file" name="csv_file" id="csv_file" required="True" class="form-control" text-align: center;>
 		<input type="submit" name="" value="submit" text-align: center;>
 	</form>
