--- a/templates/sample.html
+++ b/templates/sample.html
@@ -31,7 +31,7 @@ form,html{
   <img src="https://www.innomatics.in/wp-content/uploads/2020/08/Innomatics-Research-Labs-Logo-Fevicon-Icon.png" width="150" height="121">
 </div>
 
-  <form class="" action="predict" method="post">
+  <form class="" action="{{ url_for('predict') }}"  method="POST" enctype="multipart/form-data">
 	
 	 <h1> Your Hackathon Results </h1>
 		
